# sin_transliterator

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
sin_transliterate/: __init__.py  core.py  exceptions.py  model_registry.py
sin_transliterator/: __init__.py  core.py  exceptions.py  model_registry.py
tests/: test_core.py  test_model_registry.py
tests/fixtures/: sample_inputs.json
