[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sin_transliterate"
version = "0.1.0"
description = "Sinhala transliteration via fine-tuned Transformer and LLM models, with optional code-mix support."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "savinu linath gunarathna", email = "savinugunarathna4@gmail.com" }]
keywords = ["sinhala", "transliteration", "nlp", "code-mix"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/savi664/sin_transliterate"
Repository = "https://github.com/savi664/sin_transliterate"