[build-system]
requires = ["setuptools>=69,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin_transliterate"
version = "0.1.4"
description = "Sinhala transliteration via fine-tuned Transformer and LLM models, with optional code-mix support."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "savinu linath gunarathna", email = "savinugunarathna4@gmail.com" }]
keywords = ["sinhala", "transliteration", "nlp", "code-mix"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "huggingface_hub>=0.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
local = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

[project.urls]
Homepage = "https://github.com/savi664/sin_transliterate"
Repository = "https://github.com/savi664/sin_transliterate"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]